Bug 404645: apply an entire safebrowsing update as one transaction, rather than a transaction per chunk of entries.  r=tony, blocking-1.9=beltzner